--- a/googlleri.html
+++ b/googlleri.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <style>
+        body{
+            margin-top: 0;
+            padding-top: 0;
+        }
+    </style>
 </head>
 <body>
     <!-- navbar - start -->
@@ -21,30 +27,33 @@
     <section> 
         <!-- article - start -->
         <center>
-        <table>
+        <table style="border: 0; width: 90%;">
             <tbody>
             <tr>
-                <center>
-                    <article> 
-                        <p>
-                            Search the web using Google!
-                        </p>
-                        <input type="text" id="query" name="q" placeholder=""><br>
-                        <input type="submit" value="Google Search">
-                        <input type="submit" value="I'm feeling lucky"><br>
-                        <!-- <button>Google Search</button>
-                        <button>I'm feeling lucky</button> -->
-                    </article>
-                </center>
+                <td colspan="3"style="; background-color: #EEEEEE; padding: 1px;">
+                    <center>
+                        <article> 
+                            <p style="font-weight: bold; font-size: 16px; font-family: 'Times New Roman';">
+                                Search the web using Google!
+                                <br>
+                                <input type="text" id="query" name="q" value size="40" placeholder=""><br>
+                                <input style="background-color: #EFEFEF; padding: 1px 6px;" type="submit" value="Google Search">
+                                <input style="background-color: #EFEFEF; padding: 1px 6px;" type="submit" value="I'm feeling lucky"><br>
+                            </p>
+                            <!-- <button>Google Search</button>
+                            <button>I'm feeling lucky</button> -->
+                        </article>
+                    </center>
+                </td>
             </tr>  
 
  
             <tr>
                 
-                <td>
+                <td style="width: 37%; background-color: #7EE5DA; padding: 1px;">
                     <center>
                         <article>
-                            <p> 
+                            <p style="font-weight: bold; font-size: 16px; font-family: 'Times New Roman'"> 
                             Special Searches
                             <br>
                             <a href="/web/19990125084553/http://www.google.com/stanford">Stanford Search</a>
@@ -54,9 +63,9 @@
                         </article>
                     </center>
                 </td>
-                <td>
+                <td style="background-color: #70CCC2; padding: 1px;">
                     <center>
-                    <article style="font-size: smaller;"><br>
+                    <article style="font-size: 13px; font-family: 'Times New Roman'">
                         <a href="about.html">Why use Google!</a>
                         <br>
                         <a href="press.html">Press about Google!</a>
@@ -74,10 +83,10 @@
                     </center>
                 </td>
 
-                <td>
+                <td style="background-color: #62B3AA; padding: 1px; text-align: right;">
                     <center>
-                        <article><br>
-                            <p style="font-size: smaller">
+                        <article>
+                            <p style="font-size: 13px; font-family: 'Times New Roman'">
                                 Get Google!
                                 <br>
                                 updates monthly:
@@ -85,7 +94,7 @@
                                 <input type="text" id="email" name="emailaddr" value="your e-mail">
                                 <br>
                                 <input type="submit" value="Subscribe">
-                                <a href="https://web.archive.org/web/19990125084553/http://www.egroups.com/list/google-friends/">Archive</a>
+                                <a href="https://web.archive.org/web/19990125084553/http://www.egroups.com/list/google-friends/">  Archive</a>
                             </p>
                         </article>  
                     </center>
