--- a/googlleri.html
+++ b/googlleri.html
@@ -32,14 +32,15 @@
             <tr>
                 <td colspan="3"style="; background-color: #EEEEEE; padding: 1px;">
                     <center>
-                        <article> 
-                            <p style="font-weight: bold; font-size: 16px; font-family: 'Times New Roman';">
+                        <article style="font-size: 16px; font-family: 'Times New Roman';"> 
+                            <!-- <p > -->
                                 Search the web using Google!
                                 <br>
                                 <input type="text" id="query" name="q" value size="40" placeholder=""><br>
-                                <input style="background-color: #EFEFEF; padding: 1px 6px;" type="submit" value="Google Search">
-                                <input style="background-color: #EFEFEF; padding: 1px 6px;" type="submit" value="I'm feeling lucky"><br>
-                            </p>
+                                <input type="submit" value="Google Search">
+                                <input type="submit" value="I'm feeling lucky"><br>
+                                <p></p>
+                            <!-- </p> -->
                             <!-- <button>Google Search</button>
                             <button>I'm feeling lucky</button> -->
                         </article>
@@ -53,7 +54,7 @@
                 <td style="width: 37%; background-color: #7EE5DA; padding: 1px;">
                     <center>
                         <article>
-                            <p style="font-weight: bold; font-size: 16px; font-family: 'Times New Roman'"> 
+                            <p style="font-size: 16px; font-family: 'Times New Roman'"> 
                             Special Searches
                             <br>
                             <a href="/web/19990125084553/http://www.google.com/stanford">Stanford Search</a>
